added pickling of df

--- a/Lecture08-Pandas_data_structure_and_ploting.ipynb
+++ b/Lecture08-Pandas_data_structure_and_ploting.ipynb
@@ -2009,6 +2009,7 @@
    "source": [
     "# extra points: change values that are non-divisible by 3 to `NaN`\n",
     "# hint: you just need another line of code\n",
+    "\n",
     "my_series.apply(lambda x: x if x%3 == 0 else np.NaN)"
    ]
   },
@@ -2162,29 +2163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "numpy.datetime64('2018-01-15T00:00:00.000000000')"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = date_df.date1.values[0]\n",
-    "b = date_df.date2.values[0]\n",
-    "b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 89,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -2198,13 +2177,14 @@
     "\n",
     "date_df['month_diff'] = abs(date_df.date1 - date_df.date2).astype('timedelta64[M]')\n",
     "\n",
+    "date_df.to_pickle('../data/dates_calc.pickle')\n",
     "# Test if your results are correct\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -2312,7 +2292,7 @@
        "9 2017-10-18 2019-11-04        24.0"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
