removed dot notation

--- a/Lecture08-Pandas_data_structure_and_ploting.ipynb
+++ b/Lecture08-Pandas_data_structure_and_ploting.ipynb
@@ -2535,7 +2535,7 @@
     }
    ],
    "source": [
-    "anscombe.dataset.value_counts()"
+    "anscombe['dataset'].value_counts()"
    ]
   },
   {
@@ -2778,7 +2778,7 @@
     "# histogram\n",
     "fig = plt.figure(figsize=(4,3)) # note that we specify the size the figure\n",
     "axes1 = fig.add_subplot(1,1,1)\n",
-    "axes1.hist(tips.total_bill, bins=10) # specify 10 bins in the histogram\n",
+    "axes1.hist(tips['total_bill'], bins=10) # specify 10 bins in the histogram\n",
     "axes1.set_title('Histogram of Total Bills')"
    ]
   },
@@ -3366,7 +3366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -3375,7 +3375,7 @@
        "Text(0.5, 1.0, 'Tip as percentage of Total Bill')"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3393,7 +3393,7 @@
     }
    ],
    "source": [
-    "plt.hist((tips.tip/tips.total_bill) * 100)\n",
+    "plt.hist((tips['tip']/tips['total_bill']) * 100)\n",
     "plt.title('Tip as percentage of Total Bill')"
    ]
   },
@@ -3408,7 +3408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 123,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -3418,10 +3418,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f75b09f2c50>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f75ae754550>"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3439,7 +3439,7 @@
     }
    ],
    "source": [
-    "pd.crosstab(tips.sex, tips.smoker).plot.bar(stacked=True)"
+    "pd.crosstab(tips['sex'], tips['smoker']).plot.bar(stacked=True)"
    ]
   },
   {
@@ -3451,7 +3451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 124,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -3464,7 +3464,7 @@
        "Text(0.5, 1.0, 'Amount smoked by time')"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3482,7 +3482,7 @@
     }
    ],
    "source": [
-    "pd.crosstab(tips.time, tips['size']).plot.bar()\n",
+    "pd.crosstab(tips['time'], tips['size']).plot.bar()\n",
     "plt.title('Amount smoked by time')"
    ]
   },
